--- a/src/app/product-list/product-list.component.html
+++ b/src/app/product-list/product-list.component.html
@@ -2,7 +2,7 @@
   <div class="mdl-cell mdl-cell--12-col">
     <div class="mdl-grid">
       <div class="form-group mdl-cell mdl-cell--4-col">
-        <mdl-textfield type="text" label="Nombre" floating-label [(ngModel)]="filtername" [ngModelOptions]="{standalone: true}"></mdl-textfield>
+        <mdl-textfield type="text" placeholder="Nombre" [(ngModel)]="filtername" [ngModelOptions]="{standalone: true}"></mdl-textfield>
       </div>
       <div class="form-group mdl-cell mdl-cell--4-col">
         <md2-tags
@@ -14,8 +14,8 @@
         </md2-tags>
       </div>
       <div class="form-group mdl-cell mdl-cell--4-col">
-        <nouislider [connect]="true" [min]="0" [max]="50000" [step]="1000" [(ngModel)]="priceRange"></nouislider>
-        <p>{{priceRange[0]}} - {{priceRange[1]}}</p>
+        <nouislider [connect]="true" [min]="0" [max]="50" [step]="1" [(ngModel)]="filterprice" style="margin-top: 10px;"></nouislider>
+        <p>{{filterprice[0]}} - {{filterprice[1]}}</p>
         <!--<mdl-textfield type="text" label="Precio" floating-label [(ngModel)]="filterprice" [ngModelOptions]="{standalone: true}"></mdl-textfield>-->
       </div>
     </div>
