add description in services and about us

--- a/src/app/landing-page/content/carousel/carousel.component.html
+++ b/src/app/landing-page/content/carousel/carousel.component.html
@@ -4,7 +4,7 @@
       <div class="mdl-grid">
         <div class="mdl-cell mdl-cell--12-col">
           <h1>Bienvenido</h1>
-          <h3>Lorem ipsum amet</h3>
+          <h3>Únete a nuestra red de distribuidores</h3>
         </div>
         <div class="mdl-cell mdl-cell--6-col-desktop mdl-cell--4-tablet mdl-cell--2-phone mdl-cell--3-offset mdl-cell--1-offset">
           <button #loginButton mdl-button mdl-button-type="raised" mdl-colored="accent" mdl-ripple (click)="loginDialog.show(); currentTab=0">
@@ -19,8 +19,8 @@
     <div class="swiper-slide" id="slide-2">
       <div class="mdl-grid">
         <div class="mdl-cell mdl-cell--12-col">
-          <h1>Bienvenido</h1>
-          <h3>Lorem ipsum amet</h3>
+          <h1>Distribuidores</h1>
+          <h3>Nuestros distribuidores dan a conocer sus productos <br> y obtienen excelentses resultados</h3>
         </div>
         <div class="mdl-cell mdl-cell--6-col-desktop mdl-cell--4-tablet mdl-cell--2-phone mdl-cell--3-offset mdl-cell--1-offset">
           <button #loginButton mdl-button mdl-button-type="raised" mdl-colored="accent" mdl-ripple (click)="loginDialog.show(); currentTab=0">
@@ -36,7 +36,7 @@
       <div class="mdl-grid">
         <div class="mdl-cell mdl-cell--12-col">
           <h1>Bienvenido</h1>
-          <h3>Lorem ipsum amet</h3>
+          <h3>Únete a nuestra red de distribuidores</h3>
         </div>
         <div class="mdl-cell mdl-cell--6-col-desktop mdl-cell--4-tablet mdl-cell--2-phone mdl-cell--3-offset mdl-cell--1-offset">
           <button #loginButton mdl-button mdl-button-type="raised" mdl-colored="accent" mdl-ripple (click)="loginDialog.show(); currentTab=0">
