--- a/src/app/landing-page/content/services/services.component.html
+++ b/src/app/landing-page/content/services/services.component.html
@@ -3,7 +3,7 @@
     <h2 class="section-title text-center"><span class="mdl-color-text--indigo">|</span> Servicios <span class="mdl-color-text--indigo">|</span></h2>
   </div>
   <div class="mdl-cell mdl-cell--8-col mdl-cell--2-offset-desktop">
-    <h5 class="text-center">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Corrupti atque, tenetur quam aspernatur corporis at explicabo nulla dolore necessitatibus doloremque exercitationem sequi dolorem architecto perferendis quas aperiam debitis dolor soluta!</h5>
+    <h5 class="text-center">Al registrarte en nuestra plataforma puedes obtener beneficios que no encontraras en otro lugar. Como distribuidor puedes dar a conocer tus productos y llegar a muchos consumidores</h5>
   </div>
   <div class="mdl-cell mdl-cell--3-col-desktop mdl-cell--4 mdl-cell--2-offset-desktop">
     <div class="box">
@@ -11,10 +11,8 @@
         <i class="material-icons md-64">build</i>
       </div>
       <div class="info">
-        <h4 class="text-center">Title</h4>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Corrupti atque, tenetur quam aspernatur corporis at explicabo
-          nulla dolore necessitatibus doloremque exercitationem sequi dolorem architecto perferendis quas aperiam debitis
-          dolor soluta!</p>
+        <h4 class="text-center">Productos</h4>
+        <p>Todos los productos ofrecidos son respaldados por un distribuidor determinado y puedes conocer su reputación</p>
         <div class="mdl-cell mdl-cell--12-col text-center">
           <button mdl-button mdl-button-type="raised" mdl-colored="accent" mdl-ripple>Link</button>
         </div>
@@ -27,10 +25,8 @@
         <i class="material-icons md-64">grade</i>
       </div>
       <div class="info">
-        <h4 class="text-center">Title</h4>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Corrupti atque, tenetur quam aspernatur corporis at explicabo
-          nulla dolore necessitatibus doloremque exercitationem sequi dolorem architecto perferendis quas aperiam debitis
-          dolor soluta!</p>
+        <h4 class="text-center">Disponibilidad</h4>
+        <p>Nuestra plataforma esta disponible para todos nuestros usuarios desde cualquier lugar del país, puedes viajar y estar al tanto de lo que  ocurre con tus ventas</p>
         <div class="mdl-cell mdl-cell--12-col" style="text-align: center;">
           <button mdl-button mdl-button-type="raised" mdl-colored="accent" mdl-ripple>Link</button>
         </div>
@@ -43,16 +39,15 @@
         <i class="material-icons md-64">loyalty</i>
       </div>
       <div class="info">
-        <h4 class="text-center">Title</h4>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Corrupti atque, tenetur quam aspernatur corporis at explicabo
-          nulla dolore necessitatibus doloremque exercitationem sequi dolorem architecto perferendis quas aperiam debitis
-          dolor soluta!</p>
+        <h4 class="text-center">Analisis</h4>
+        <p>Al ser uno de nuestro distribuidores podras ver graficas, mapas, resumenes de tus ventas y tener las cuentas claras de las ventas de tus productos!</p>
         <div class="mdl-cell mdl-cell--12-col" style="text-align: center;">
           <button mdl-button mdl-button-type="raised" mdl-colored="accent" mdl-ripple>Link</button>
         </div>
       </div>
     </div>
   </div>
+<!--
   <div class="mdl-cell mdl-cell--3-col-desktop mdl-cell--4 mdl-cell--2-offset-desktop">
     <div class="box">
       <div class="box-icon mdl-color--indigo">
@@ -101,4 +96,5 @@
       </div>
     </div>
   </div>
+  -->
 </div>
