--- a/src/app/landing-page/content/about-us/about-us.component.html
+++ b/src/app/landing-page/content/about-us/about-us.component.html
@@ -4,19 +4,16 @@
   </div>
   <div class="mdl-cell mdl-cell--12-col">
     <h5 class="text-center">
-      Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure
-dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat
-non proident, sunt in culpa qui officia deserunt mollit anim id est laborum
+      Conoce a nuestro equipo de trabajo.
     </h5>
   </div>
     <div class="mdl-cell mdl-cell--3-col-desktop mdl-cell--4 mdl-cell--2-offset-desktop">
       <figure class="profile-card">
-        <div class="profile-image"><img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/331810/sample47.jpg" alt="sample47" /></div>
+        <div class="profile-image"><img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/331810/sample83.jpg" alt="sample47" /></div>
         <figcaption>
-          <h3>Fleece Marigold</h3>
-          <h4>Founder</h4>
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor</p>
+          <h3>Laura Cardenas</h3>
+          <h4>Scrum Master</h4>
+          <p>Ingeniera de sistemas y computación</p>
           <div class="icons"><a href="#"><i class="ion-social-facebook"></i></a>
             <a href="#"> <i class="ion-social-twitter"></i></a>
             <a href="#"> <i class="ion-social-tumblr"></i></a>
@@ -26,11 +23,11 @@ non proident, sunt in culpa qui officia deserunt mollit anim id est laborum
     </div>
     <div class="mdl-cell mdl-cell--3-col-desktop mdl-cell--4">
       <figure class="profile-card">
-        <div class="profile-image"><img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/331810/sample83.jpg" alt="sample83" /></div>
+        <div class="profile-image"><img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/331810/sample47.jpg" alt="sample83" /></div>
         <figcaption>
-          <h3>Norman Gordon</h3>
-          <h4>Web Designer</h4>
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor</p>
+          <h3>Juan Rubio</h3>
+          <h4>Desarrollador</h4>
+          <p>Especialista en base de datos</p>
           <div class="icons"><a href="#"><i class="ion-social-facebook"></i></a>
             <a href="#"> <i class="ion-social-twitter"></i></a>
             <a href="#"> <i class="ion-social-tumblr"></i></a>
@@ -40,11 +37,11 @@ non proident, sunt in culpa qui officia deserunt mollit anim id est laborum
     </div>
     <div class="mdl-cell mdl-cell--3-col-desktop mdl-cell--4">
       <figure class="profile-card">
-        <div class="profile-image"><img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/331810/sample70.jpg" alt="sample70" /></div>
+        <div class="profile-image"><img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/331810/sample47.jpg" alt="sample70" /></div>
         <figcaption>
-          <h3>Ruby Von Rails</h3>
-          <h4>Public Relations</h4>
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor</p>
+          <h3>Oscar Nañez</h3>
+          <h4>Desarrollador</h4>
+          <p>Ingeniero de sistemas y computación</p>
           <div class="icons"><a href="#"><i class="ion-social-facebook"></i></a>
             <a href="#"> <i class="ion-social-twitter"></i></a>
             <a href="#"> <i class="ion-social-tumblr"></i></a>
@@ -56,9 +53,9 @@ non proident, sunt in culpa qui officia deserunt mollit anim id est laborum
       <figure class="profile-card">
         <div class="profile-image"><img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/331810/sample47.jpg" alt="sample47" /></div>
         <figcaption>
-          <h3>Fleece Marigold</h3>
-          <h4>Founder</h4>
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor</p>
+          <h3>Felipe  Guerrero</h3>
+          <h4>Diseñador web</h4>
+          <p>Especialista en desarrollo front-end</p>
           <div class="icons">
             <a href="#"><i class="ion-social-facebook"></i></a>
             <a href="#"> <i class="ion-social-twitter"></i></a>
@@ -69,11 +66,11 @@ non proident, sunt in culpa qui officia deserunt mollit anim id est laborum
     </div>
     <div class="mdl-cell mdl-cell--3-col-desktop mdl-cell--4">
       <figure class="profile-card">
-        <div class="profile-image"><img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/331810/sample83.jpg" alt="sample83" /></div>
+        <div class="profile-image"><img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/331810/sample47.jpg" alt="sample83" /></div>
         <figcaption>
-          <h3>Norman Gordon</h3>
-          <h4>Web Designer</h4>
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor</p>
+          <h3>Jonatan Ortiz</h3>
+          <h4>Diseñador web</h4>
+          <p>Especialista en desarrollo front-end</p>
           <div class="icons">
             <a href="#"><i class="ion-social-facebook"></i></a>
             <a href="#"> <i class="ion-social-twitter"></i></a>
@@ -84,11 +81,12 @@ non proident, sunt in culpa qui officia deserunt mollit anim id est laborum
     </div>
     <div class="mdl-cell mdl-cell--3-col-desktop mdl-cell--4">
       <figure class="profile-card">
-        <div class="profile-image"><img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/331810/sample70.jpg" alt="sample70" /></div>
+      <!--  https://s3-us-west-2.amazonaws. com/s.cdpn.io/331810/sample70.jpg  -->
+        <div class="profile-image"><img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/331810/sample47.jpg" alt="sample70" /></div>
         <figcaption>
-          <h3>Ruby Von Rails</h3>
-          <h4>Public Relations</h4>
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor</p>
+          <h3>Jonatan Parra</h3>
+          <h4>Diseñador web</h4>
+          <p>Especialista en desarrollo front-end</p>
           <div class="icons">
             <a href="#"><i class="ion-social-facebook"></i></a>
             <a href="#"> <i class="ion-social-twitter"></i></a>
