--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
-<div *ngIf="location.path()!=''">
+<div *ngIf="location.path()!='' && location.path()!='/register'">
     <mdl-layout mdl-layout-fixed-header mdl-layout-fixed-drawer>
       <mdl-layout-header class="mdl-color--indigo-700">
          <mdl-layout-header-row>
@@ -27,6 +27,6 @@
    </mdl-layout>
 </div>
 
-<div *ngIf="location.path()==''">
+<div *ngIf="location.path()=='' || location.path()=='/register'">
     <router-outlet></router-outlet>
 </div>
