--- a/src/app/landing-page/content/carousel/carousel.component.scss
+++ b/src/app/landing-page/content/carousel/carousel.component.scss
@@ -40,9 +40,14 @@ swiper{
 }
 
 button {
-  margin-right: 5px;
+  margin: auto;
+  text-align: center;
 }
 
 mdl-textfield{
   width:90%;
+}
+
+mdl-radio{
+  text-align: center;
 }
