--- a/src/app/retailer-detail/retailer-detail.component.html
+++ b/src/app/retailer-detail/retailer-detail.component.html
@@ -51,7 +51,7 @@
       </ng2-map>
     </mdl-card-title>
     <mdl-card-supporting-text>
-      {{retailerAddress}}
+      {{retailer.location}}
     </mdl-card-supporting-text>
     <mdl-card-menu>
       <!--<button mdl-button mdl-button-type="icon" mdl-ripple>
