--- a/src/app/distributor-detail/distributor-detail.component.html
+++ b/src/app/distributor-detail/distributor-detail.component.html
@@ -51,7 +51,7 @@
       </ng2-map>
     </mdl-card-title>
     <mdl-card-supporting-text>
-      {{distributorAddress}}
+      {{distributor.location}}
     </mdl-card-supporting-text>
     <mdl-card-menu>
       <!--<button mdl-button mdl-button-type="icon" mdl-ripple>
