--- a/src/app/landing-page/content/carousel/carousel.component.html
+++ b/src/app/landing-page/content/carousel/carousel.component.html
@@ -7,10 +7,10 @@
           <h3>Lorem ipsum amet</h3>
         </div>
         <div class="mdl-cell mdl-cell--6-col-desktop mdl-cell--4-tablet mdl-cell--2-phone mdl-cell--3-offset mdl-cell--1-offset">
-          <button #loginButton mdl-button mdl-button-type="raised" mdl-colored="accent" mdl-ripple (click)="loginDialog.show(); currentTab=0">
+          <button #loginButton mdl-button mdl-button-type="raised" mdl-colored="accent" mdl-ripple (click)="loginDialog.show()">
             Inicia Sesión
           </button>
-          <button #loginButton mdl-button mdl-button-type="raised" mdl-colored="primary" mdl-ripple (click)="loginDialog.show(); currentTab=1">
+          <button routerLink="/register" mdl-button mdl-button-type="raised" mdl-colored="primary" mdl-ripple>
             Regístrate
           </button>
         </div>
@@ -23,10 +23,10 @@
           <h3>Lorem ipsum amet</h3>
         </div>
         <div class="mdl-cell mdl-cell--6-col-desktop mdl-cell--4-tablet mdl-cell--2-phone mdl-cell--3-offset mdl-cell--1-offset">
-          <button #loginButton mdl-button mdl-button-type="raised" mdl-colored="accent" mdl-ripple (click)="loginDialog.show(); currentTab=0">
+          <button #loginButton mdl-button mdl-button-type="raised" mdl-colored="accent" mdl-ripple (click)="loginDialog.show()">
             Inicia Sesión
           </button>
-          <button #loginButton mdl-button mdl-button-type="raised" mdl-colored="primary" mdl-ripple (click)="loginDialog.show(); currentTab=1">
+          <button routerLink="/register" mdl-button mdl-button-type="raised" mdl-colored="primary" mdl-ripple>
             Regístrate
           </button>
         </div>
@@ -39,10 +39,10 @@
           <h3>Lorem ipsum amet</h3>
         </div>
         <div class="mdl-cell mdl-cell--6-col-desktop mdl-cell--4-tablet mdl-cell--2-phone mdl-cell--3-offset mdl-cell--1-offset">
-          <button #loginButton mdl-button mdl-button-type="raised" mdl-colored="accent" mdl-ripple (click)="loginDialog.show(); currentTab=0">
+          <button #loginButton mdl-button mdl-button-type="raised" mdl-colored="accent" mdl-ripple (click)="loginDialog.show()">
             Inicia Sesión
           </button>
-          <button #loginButton mdl-button mdl-button-type="raised" mdl-colored="primary" mdl-ripple (click)="loginDialog.show(); currentTab=1">
+          <button routerLink="/register" mdl-button mdl-button-type="raised" mdl-colored="primary" mdl-ripple>
             Regístrate
           </button>
         </div>
@@ -67,64 +67,40 @@
               enterTransitionDuration: 400,
               leaveTransitionDuration: 400}"
               >
+  <h3 class="mdl-dialog__title">Iniciar Sesión</h3>
   <div class="mdl-dialog__content">
-      <mdl-tabs mdl-ripple [mdl-tab-active-index]="currentTab">
-        <mdl-tab-panel mdl-tab-panel-title="Inicia Sesión">
-          <br>
-          <div class="mdl-grid">
-            <div class="mdl-cell mdl-cell--10-col mdl-cell--1-offset-desktop">
-              <mdl-icon class="mdl-color-text--indigo">email</mdl-icon>
-              <mdl-textfield
-                type="text"
-                label="Correo Electrónico"
-                autofocus
-                floating-label
-                pattern="^[a-zA-Z0-9.!#$%&'*+/=?^_`{|}~-]+@[a-zA-Z0-9](?:[a-zA-Z0-9-]{0,61}[a-zA-Z0-9])?(?:\.[a-zA-Z0-9](?:[a-zA-Z0-9-]{0,61}[a-zA-Z0-9])?)*$"
-                error-msg="Correo inválido"></mdl-textfield>
-                <mdl-icon class="mdl-color-text--indigo">lock</mdl-icon>
-              <mdl-textfield
-                type="password"
-                label="Contraseña"
-                floating-label
-              ></mdl-textfield>
-            </div>
-          </div>
-        </mdl-tab-panel>
-        <mdl-tab-panel mdl-tab-panel-title="Regístrate">
-          <br>
-          <div class="mdl-grid">
-            <div class="mdl-cell mdl-cell--10-col mdl-cell--1-offset-desktop">
-              <mdl-icon class="mdl-color-text--indigo">email</mdl-icon>
-              <mdl-textfield
-                type="text"
-                label="Correo Electrónico"
-                autofocus
-                floating-label
-                pattern="^[a-zA-Z0-9.!#$%&'*+/=?^_`{|}~-]+@[a-zA-Z0-9](?:[a-zA-Z0-9-]{0,61}[a-zA-Z0-9])?(?:\.[a-zA-Z0-9](?:[a-zA-Z0-9-]{0,61}[a-zA-Z0-9])?)*$"
-                error-msg="Correo inválido"></mdl-textfield>
-              <mdl-icon class="mdl-color-text--indigo">account_circle</mdl-icon>
-              <mdl-textfield
-                type="text"
-                label="Nombre"
-                floating-label
-                pattern="^[a-zA-Z\s]*$"
-                error-msg="Nombre inválido, solo letras y espacios"></mdl-textfield>
-              <mdl-icon class="mdl-color-text--indigo">lock</mdl-icon>
-              <mdl-textfield
-                type="password"
-                label="Contraseña"
-                floating-label></mdl-textfield>
-              <mdl-icon class="mdl-color-text--indigo">lock</mdl-icon>
-              <mdl-textfield
-                type="password"
-                label="Repetir Contraseña"
-                floating-label></mdl-textfield>
-            </div>
-          </div>
-        </mdl-tab-panel>
-    </mdl-tabs>
-  </div>
-  <div class="mdl-dialog__actions">
-    <button mdl-button mdl-button-type="raised" mdl-colored="primary" mdl-ripple>Enviar</button>
+    <div class="mdl-grid">
+      <div class="mdl-cell mdl-cell--12-col">
+        <mdl-icon class="mdl-color-text--indigo">email</mdl-icon>
+        <mdl-textfield
+          type="text"
+          label="Correo Electrónico"
+          autofocus
+          floating-label
+          pattern="^[a-zA-Z0-9.!#$%&'*+/=?^_`{|}~-]+@[a-zA-Z0-9](?:[a-zA-Z0-9-]{0,61}[a-zA-Z0-9])?(?:\.[a-zA-Z0-9](?:[a-zA-Z0-9-]{0,61}[a-zA-Z0-9])?)*$"
+          error-msg="Correo inválido"
+          [(ngModel)]="email"
+          name="email"></mdl-textfield>
+      </div>
+      <div class="mdl-cell mdl-cell--12-col">
+        <mdl-icon class="mdl-color-text--indigo">lock</mdl-icon>
+        <mdl-textfield
+          type="password"
+          label="Contraseña"
+          floating-label
+          [(ngModel)]="password"
+          name="password"
+        ></mdl-textfield>
+      </div>
+      <div class="mdl-cell mdl-cell--6-col">
+        <mdl-radio name="group1" value="DISTRIBUTOR" [(ngModel)]="userType" mdl-ripple>Distribuidor</mdl-radio>
+      </div>
+      <div class="mdl-cell mdl-cell--6-col">
+        <mdl-radio name="group1" value="RETAILER" [(ngModel)]="userType" mdl-ripple>Minorista</mdl-radio>
+      </div>
+    </div>
+    <div class="mdl-dialog__actions">
+      <button mdl-button mdl-button-type="raised" mdl-colored="primary" mdl-ripple (click)="signIn()">Entrar</button>
+    </div>
   </div>
 </mdl-dialog>
