Comment resolver and service fixed

--- a/src/app/comments/comments.component.html
+++ b/src/app/comments/comments.component.html
@@ -1,6 +1,6 @@
 <div>
   <label>Comentarios: </label>
   <li *ngFor="let comment of comments">
-   <span> <strong>{{comment.name}}</strong></span>
+   <span> <strong>{{comment.title}}</strong></span>
   </li>
 </div>
