--- a/src/app/register/register.component.html
+++ b/src/app/register/register.component.html
@@ -7,7 +7,9 @@
       autofocus
       floating-label
       pattern="^[a-zA-Z0-9.!#$%&'*+/=?^_`{|}~-]+@[a-zA-Z0-9](?:[a-zA-Z0-9-]{0,61}[a-zA-Z0-9])?(?:\.[a-zA-Z0-9](?:[a-zA-Z0-9-]{0,61}[a-zA-Z0-9])?)*$"
-      error-msg="Correo inválido"></mdl-textfield>
+      error-msg="Correo inválido"
+      [(ngModel)]="email"
+      name="email"></mdl-textfield>
   </div>
   <div class="mdl-cell mdl-cell--10-col mdl-cell--1-offset-desktop">
     <mdl-icon class="mdl-color-text--indigo">account_circle</mdl-icon>
@@ -16,25 +18,44 @@
       label="Nombre"
       floating-label
       pattern="^[a-zA-Z\s]*$"
-      error-msg="Nombre inválido, solo letras y espacios"></mdl-textfield>
+      error-msg="Nombre inválido, solo letras y espacios"
+      [(ngModel)]="name"
+      name="name"></mdl-textfield>
+  </div>
+  <div class="mdl-cell mdl-cell--10-col mdl-cell--1-offset-desktop">
+    <mdl-icon class="mdl-color-text--indigo">phone</mdl-icon>
+    <mdl-textfield
+      type="text"
+      label="Celular"
+      floating-label
+      pattern="^[0-9]*$"
+      error-msg="Numero invalido, solo numeros"
+      [(ngModel)]="phoneNumber"
+      name="phoneNumber"></mdl-textfield>
   </div>
   <div class="mdl-cell mdl-cell--10-col mdl-cell--1-offset-desktop">
     <mdl-icon class="mdl-color-text--indigo">lock</mdl-icon>
     <mdl-textfield
       type="password"
       label="Contraseña"
-      floating-label></mdl-textfield>
+      floating-label
+      [(ngModel)]="password"
+      name="password"></mdl-textfield>
   </div>
   <div class="mdl-cell mdl-cell--10-col mdl-cell--1-offset-desktop">
     <mdl-icon class="mdl-color-text--indigo">lock</mdl-icon>
     <mdl-textfield
       type="password"
       label="Repetir Contraseña"
-      floating-label></mdl-textfield>
+      floating-label
+      [(ngModel)]="passwordConfirm"
+      name="passwordConfirm"></mdl-textfield>
   </div>
   <div class="mdl-cell mdl-cell--10-col mdl-cell--1-offset-desktop">
-    <mdl-radio name="group1" value="distributor" [(ngModel)]="userType" mdl-ripple>Distribuidor</mdl-radio>
-    <mdl-radio name="group1" value="retailer" [(ngModel)]="userType" mdl-ripple>Minorista</mdl-radio>
+    <mdl-radio name="group1" value="DISTRIBUTOR" [(ngModel)]="userType" mdl-ripple>Distribuidor</mdl-radio>
+    <mdl-radio name="group1" value="RETAILER" [(ngModel)]="userType" mdl-ripple>Minorista</mdl-radio>
   </div>
-  
+  <div class="mdl-cell mdl-cell--10-col mdl-cell--1-offset-desktop">
+    <button mdl-button mdl-button-type="raised" mdl-colored="primary" mdl-ripple (click)="signUp()">Entrar</button>
+  </div>
 </div>
