Little fix to register

--- a/src/app/register/register.component.html
+++ b/src/app/register/register.component.html
@@ -48,8 +48,8 @@
       type="password"
       label="Repetir Contraseña"
       floating-label
-      [(ngModel)]="passwordConfirm"
-      name="passwordConfirm"></mdl-textfield>
+      [(ngModel)]="passwordConfirmation"
+      name="passwordConfirmation"></mdl-textfield>
   </div>
   <div class="mdl-cell mdl-cell--10-col mdl-cell--1-offset-desktop">
     <mdl-radio name="group1" value="DISTRIBUTOR" [(ngModel)]="userType" mdl-ripple>Distribuidor</mdl-radio>
