The favicon and logo are located in the correct folders

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -13,7 +13,7 @@
          </mdl-layout-header-row>
       </mdl-layout-header>
       <mdl-layout-drawer class="mdl-color--grey">
-         <mdl-layout-title><img src="src/logo.png"></mdl-layout-title>
+         <mdl-layout-title><img src="src/assets/img/logo.png"></mdl-layout-title>
          <nav class="mdl-navigation">
             <a class="mdl-navigation__link" href="#" routerLink="/distributors">Inicio</a>
             <a [class.active]="location.path()=='/distributors'" class="mdl-navigation__link" href="#" routerLink="/distributors">Distribuidores</a>
