update route of logo in landing page

--- a/src/app/landing-page/landing-page.component.html
+++ b/src/app/landing-page/landing-page.component.html
@@ -1,7 +1,7 @@
 <mdl-layout mdl-layout-fixed-header scroller>
     <mdl-layout-header id="navbar" [class.transparent-nav]="navIsTransparent">
         <mdl-layout-header-row>
-            <mdl-layout-title><img src="src/logo.png"></mdl-layout-title>
+            <mdl-layout-title><img src="src/assets/img/logo.png"></mdl-layout-title>
             <mdl-layout-spacer></mdl-layout-spacer>
             <nav class="mdl-navigation">
                 <a class="mdl-navigation__link" pageScroll [pageScrollOffset]="0" [pageScrollDuration]="400" href="#home">Inicio</a>
