Refactor of Distributors Module

--- a/src/app/dealers/distributors/distributor-list/distributor-list.component.html
+++ b/src/app/dealers/distributors/distributor-list/distributor-list.component.html
@@ -1,4 +1,7 @@
-<div class="mdl-grid">
+LISTA DE DISTRIBUIDORES
+
+<!--
+  <div class="mdl-grid">
   <div class="mdl-cell mdl-cell--12-col">
     <div class="mdl-grid">
       <div class="form-group mdl-cell mdl-cell--4-col">
@@ -31,4 +34,4 @@
   </mdl-card>
   </div>
 </div>
-
+-->
