Changes in paths and routing
Now empty path (" ") redirects to landing page, dealers module is in /app subroute
Now lists and drawer have relative paths
The app module is unaccesible without authentication
Logout and login redirect to the correct page

--- a/src/app/dealers/dealers.component.html
+++ b/src/app/dealers/dealers.component.html
@@ -14,10 +14,10 @@
   <mdl-layout-drawer class="mdl-color--grey">
       <mdl-layout-title><img src="src/assets/img/logo.png"></mdl-layout-title>
       <nav class="mdl-navigation">
-        <a class="mdl-navigation__link" href="#" routerLink="/" routerLinkActive='active' [routerLinkActiveOptions]="{exact: true}">Inicio</a>
-        <a class="mdl-navigation__link" href="#" routerLink="/distributors" routerLinkActive='active'>Distribuidores</a>
-        <a class="mdl-navigation__link" href="#" routerLink="/retailers" routerLinkActive='active'>Minoristas</a>
-        <a class="mdl-navigation__link" href="#" routerLink="/products" routerLinkActive='active'>Productos</a>
+        <a class="mdl-navigation__link" href="#" routerLink="/app" routerLinkActive='active' [routerLinkActiveOptions]="{exact: true}">Inicio</a>
+        <a class="mdl-navigation__link" href="#" routerLink="distributors" routerLinkActive='active'>Distribuidores</a>
+        <a class="mdl-navigation__link" href="#" routerLink="retailers" routerLinkActive='active'>Minoristas</a>
+        <a class="mdl-navigation__link" href="#" routerLink="products" routerLinkActive='active'>Productos</a>
       </nav>
   </mdl-layout-drawer>
   <mdl-layout-content>
