--- a/src/app/dealers/distributors/distributor-list/distributor-list.component.html
+++ b/src/app/dealers/distributors/distributor-list/distributor-list.component.html
@@ -21,7 +21,7 @@
       <p class="card-text">{{distributor.email}} <br> {{distributor.phoneNumber}}</p>
     </mdl-card-supporting-text>
     <mdl-card-actions mdl-card-border>
-      <a href="/distributors/{{distributor.id}}" mdl-button mdl-colored mdl-ripple>Ver perfil</a>
+      <a routerLink="{{distributor.id}}" mdl-button mdl-colored mdl-ripple>Ver perfil</a>
     </mdl-card-actions>
     <mdl-card-menu>
       <button mdl-button mdl-button-type="icon" mdl-ripple>
