--- a/src/app/dealers/products/product-list/product-list.component.html
+++ b/src/app/dealers/products/product-list/product-list.component.html
@@ -36,8 +36,8 @@
       <p class="card-text">Distribuidor: {{item.distributor.name}}</p>
     </mdl-card-supporting-text>
     <mdl-card-actions mdl-card-border>
-      <a href="/products/{{item.id}}"  mdl-button mdl-colored mdl-ripple>Ver producto</a>
-      <a href="/products/{{item.id}}"  mdl-button-type="raised" mdl-button mdl-colored="accent" mdl-ripple>Pedir</a>
+      <a routerLink="{{item.id}}"  mdl-button mdl-colored mdl-ripple>Ver producto</a>
+      <a routerLink="{{item.id}}"  mdl-button-type="raised" mdl-button mdl-colored="accent" mdl-ripple>Pedir</a>
     </mdl-card-actions>
     <mdl-card-menu>
       <button mdl-button mdl-button-type="icon" mdl-ripple>
