--- a/src/app/dealers/retailers/retailers-list/retailers-list.component.html
+++ b/src/app/dealers/retailers/retailers-list/retailers-list.component.html
@@ -21,7 +21,7 @@
       <p class="card-text">{{retailer.email}} <br> {{retailer.phoneNumber}}</p>
     </mdl-card-supporting-text>
     <mdl-card-actions mdl-card-border>
-      <a href="/retailers/{{retailer.id}}" mdl-button mdl-colored mdl-ripple>Ver perfil</a>
+      <a routerLink="{{retailer.id}}" mdl-button mdl-colored mdl-ripple>Ver perfil</a>
     </mdl-card-actions>
     <mdl-card-menu>
       <button mdl-button mdl-button-type="icon" mdl-ripple>
