--- a/src/app/landing-page/content/carousel/carousel.component.html
+++ b/src/app/landing-page/content/carousel/carousel.component.html
@@ -75,12 +75,12 @@
         <mdl-textfield
           type="text"
           label="Correo Electrónico"
-          autofocus
           floating-label
           pattern="^[a-zA-Z0-9.!#$%&'*+/=?^_`{|}~-]+@[a-zA-Z0-9](?:[a-zA-Z0-9-]{0,61}[a-zA-Z0-9])?(?:\.[a-zA-Z0-9](?:[a-zA-Z0-9-]{0,61}[a-zA-Z0-9])?)*$"
           error-msg="Correo inválido"
           [(ngModel)]="email"
-          name="email"></mdl-textfield>
+          name="email"
+          autofocus></mdl-textfield>
       </div>
       <div class="mdl-cell mdl-cell--12-col">
         <mdl-icon class="mdl-color-text--indigo">lock</mdl-icon>
@@ -101,6 +101,7 @@
     </div>
     <div class="mdl-dialog__actions">
       <button mdl-button mdl-button-type="raised" mdl-colored="primary" mdl-ripple (click)="signIn()">Entrar</button>
+      <button mdl-button mdl-colored="primary" mdl-ripple (click)="loginDialog.close()">Cancelar</button>
     </div>
   </div>
 </mdl-dialog>
