Little fix for product list

--- a/src/app/dealers/products/product-list/product-list.component.html
+++ b/src/app/dealers/products/product-list/product-list.component.html
@@ -24,7 +24,7 @@
                 |filteredOfferedProductsCategory : filtercategory
                 |filterOfferedProductsPrice :filterprice ">
     <mdl-card mdl-shadow="4">
-    <mdl-card-title [style.background-image]="getUrl(item.product.photo.url)">
+    <mdl-card-title [style.background-image]="getUrl(item.photo.url)">
 <!--        <img src="{{item.product.photo.url}}" class="md-card-image" alt="">-->
 
       <h2 mdl-card-title-text>{{item.product.name}}</h2>
