Forgot fix for product detail :v

--- a/src/app/dealers/products/product-detail/product-detail.component.html
+++ b/src/app/dealers/products/product-detail/product-detail.component.html
@@ -2,7 +2,7 @@
 
 	   <div class="mdl-layout-spacer"></div>
     <div class="mdl-cell mdl-cell--4-col">
-	<img src="{{data.product.photo.url}}" alt="">
+	<img src="{{data.photo.url}}" alt="">
 
 	<ul class='mdl-list'>
 		  	<li class="mdl-list__item">
