--- a/src/app/dealers/orders/order-list/order-list.component.html
+++ b/src/app/dealers/orders/order-list/order-list.component.html
@@ -9,6 +9,10 @@
               <text x="0.5" y="0.5" font-family="Roboto" font-size="0.3" fill="#888" text-anchor="middle" dy="0.1">82<tspan font-size="0.2" dy="-0.07">%</tspan></text>
             </svg>
   </div>
+
+  <div class = "table mdl-shadow--8dp mdl-cell mdl-cell--12-col mdl -grid">
+      hehe xd
+  </div>
   
 
 </div>
