--- a/src/app/dealers/orders/order-list/order-list.component.scss
+++ b/src/app/dealers/orders/order-list/order-list.component.scss
@@ -1,4 +1,4 @@
-.demo-charts {
+.charts {
   -webkit-align-items: center;
       -ms-flex-align: center;
           align-items: center;
@@ -8,4 +8,7 @@
 }
 .chart:nth-child(2) {
   color: #00BBD6;
+}
+.table {
+  background-color: #00BBD6
 }
