--- a/src/app/dealers/dealers.component.html
+++ b/src/app/dealers/dealers.component.html
@@ -18,6 +18,7 @@
         <a class="mdl-navigation__link" href="#" routerLink="distributors" routerLinkActive='active'>Distribuidores</a>
         <a class="mdl-navigation__link" href="#" routerLink="retailers" routerLinkActive='active'>Minoristas</a>
         <a class="mdl-navigation__link" href="#" routerLink="products" routerLinkActive='active'>Productos</a>
+        <a class="mdl-navigation__link" href="#" routerLink="orders" routerLinkActive='active'>Ordenes</a>
       </nav>
   </mdl-layout-drawer>
   <mdl-layout-content>
