--- a/src/app/dealers/retailers/retailers-list/retailers-list.component.html
+++ b/src/app/dealers/retailers/retailers-list/retailers-list.component.html
@@ -12,7 +12,7 @@
       </div>
     </div>
   </div>
-  <div class="mdl-cell mdl-cell--4-col" *ngFor="let retailer of retailers">
+  <div class="mdl-cell mdl-cell--4-col" *ngFor="let retailer of retailers | paginate: { itemsPerPage: 9, currentPage: page }">
     <mdl-card mdl-shadow="4">
     <mdl-card-title [style.background-image]="getUrl(retailer.photo.url)">
       <h2 mdl-card-title-text>{{retailer.name}}</h2>
@@ -29,6 +29,11 @@
       </button>
     </mdl-card-menu>
   </mdl-card>
+    
+  </div>
+  <div class ="mdl-grid">
+     <pagination-controls (pageChange)="page = $event"></pagination-controls> 
   </div>
 </div>
+
 
