--- a/src/app/dealers/distributors/distributor-list/distributor-list.component.html
+++ b/src/app/dealers/distributors/distributor-list/distributor-list.component.html
@@ -1,5 +1,5 @@
 <div class="mdl-grid">
-  <div class="mdl-cell mdl-cell--12-col">
+  <div class="mdl-cell mdl-cell--12-col search">
     <div class="mdl-grid">
       <div class="form-group mdl-cell mdl-cell--4-col">
         <mdl-textfield type="text" label="Nombre" floating-label></mdl-textfield>
