--- a/src/styles.scss
+++ b/src/styles.scss
@@ -3,7 +3,10 @@
   text-align: center;
 }
 
-html, body {height:100%;}
+html, body {
+  height:100%;
+  overflow-x: hidden;
+}
 
 
 /* Rules for sizing the icon. */
