--- a/src/app/dealers/retailers/retailers-list/retailers-list.component.html
+++ b/src/app/dealers/retailers/retailers-list/retailers-list.component.html
@@ -1,13 +1,13 @@
 <div class="mdl-grid">
   <div class="mdl-cell mdl-cell--12-col">
     <div class="mdl-grid">
-      <div class="form-group mdl-cell mdl-cell--3-col">
+      <div class="form-group mdl-cell mdl-cell--4-col">
         <mdl-textfield type="text" label="Nombre" floating-label></mdl-textfield>
       </div>
-      <div class="form-group mdl-cell mdl-cell--3-col">
+      <div class="form-group mdl-cell mdl-cell--4-col">
         <mdl-textfield type="text" label="Departamento" floating-label></mdl-textfield>
       </div>
-      <div class="form-group mdl-cell mdl-cell--3-col">
+      <div class="form-group mdl-cell mdl-cell--4-col">
         <mdl-textfield type="text" label="Calificacion" floating-label></mdl-textfield>
       </div>
     </div>
@@ -32,7 +32,11 @@
     
   </div>
   <div class ="mdl-grid">
-     <pagination-controls (pageChange)="page = $event"></pagination-controls> 
+     <pagination-controls (pageChange)="page = $event"
+                          previousLabel= "Anterior"
+                          nextLabel = "Siguiente"
+     >
+     </pagination-controls> 
   </div>
 </div>
 
