--- a/src/app/dealers/dealers.component.scss
+++ b/src/app/dealers/dealers.component.scss
@@ -17,15 +17,15 @@
   background-size: cover;
   .nav-logo{
     img{
-      margin-left: 2vmax;
+      margin-left: 2.5vmax;
       margin-top: 2vmax;
       width: 13vmax;
     }
   }
   .floating-right{
     position: absolute;
-    left: 90vw;
-    bottom: 6vw;
+    left: 87vmax;
+    bottom: 6vmax;
     button{
       margin-left: 10px;
     }
